# sec-insights-taj

./: .gitignore  .vercelignore  DEPLOYMENT.md  package-lock.json  package.json  vercel.json
.github/: copilot-instructions.md
backend/: pyproject.toml  sitecustomize.py
backend/app/: main.py  schema.py
backend/app/api/endpoints/: conversation.py
backend/app/chat/: engine.py  pg_vector.py  tools.py  utils.py
backend/app/core/: config.py
backend/tests/: conftest.py
backend/tests/app/chat/: test_utils.py
frontend/: .env.example  .npmrc  README.md  next.config.mjs  package-lock.json  package.json
frontend/libs/dommatrix/: package.json
frontend/libs/dommatrix/pkg/: dommatrix.js
frontend/libs/dommatrix/types/: index.d.ts
frontend/libs/dommatrix/types/more/: dommatrix.ts
frontend/src/: env.mjs
