[tool.poetry]
name = "llama-app-backend"
version = "0.1.0"
description = "Backend for Llama App"
authors = ["Sourabh Desai <sourabhdesai@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "^0.115.11"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["async"], version = "^2.0.36"}
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
alembic = "^1.17.0"
psycopg2 = {extras = ["binary"], version = "^2.9.10"}
psycopg2-binary = "^2.9.10"
sse-starlette = "^2.2.0"
pypdf = "^5.3.1"
anyio = "^4.11.0"
s3fs = "^2024.12.0"
fsspec = "^2024.12.0"
pdfkit = "^1.0.0"
pgvector = "^0.3.6"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
llama-index-core = "^0.12.23"
polygon = "^1.2.6"
polygon-api-client = "^1.14.4"
nltk = "^3.9.1"
cachetools = "^5.5.0"
greenlet = "^3.2.0"
email-validator = "^2.2.0"
pydantic-settings = "^2.8.1"
openai = "^1.66.2"
llama-index-vector-stores-postgres = "^0.4.2"
llama-index-embeddings-openai = "^0.3.1"
llama-index-readers-file = "^0.4.6"
llama-index-llms-openai = "^0.3.25"
llama-index-agent-openai = "^0.4.6"
llama-index-question-gen-openai = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.0"
pytest = "^8.3.0"
sseclient-py = "^1.8.0"
pdfkit = "^1.0.0"
fire = "^0.7.0"
sec-edgar-downloader = "~5.0"
pytickersymbols = "^1.14.0"
awscli-local = "^0.22"
llama-index-callbacks-arize-phoenix = "^0.4.0"
arize-phoenix = "^12.7.0"

[tool.poetry.scripts]
start = "app.main:start"
migrate_db = "app.main:migrate_db"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
